Add socket.io to package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Core server for an extensible, modular chat application",
   "main": "server.js",
   "dependencies": {
-    "mongodb": "^1.4.20"
+    "mongodb": "^1.4.20",
+    "socket.io": "^1.2.0"
   },
   "devDependencies": {},
   "scripts": {
