--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "highlight": "^0.2.3",
     "mongodb": "^1.4.22",
     "peer": "^0.2.8",
+    "sanitize-html": "^1.7.0",
     "socket.io": "^1.2.1"
   },
   "devDependencies": {},
