--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "highlight": "^0.2.3",
     "mongodb": "^1.4.22",
+    "mongoose": "^4.1.0",
     "peer": "^0.2.8",
     "sanitize-html": "^1.7.0",
     "socket.io": "^1.2.1"
