--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "sites/launch_default.js",
   "dependencies": {
     "body-parser": "^1.13.3",
+    "bunyan": "^1.4.0",
     "express": "^4.13.3",
     "highlight": "^0.2.3",
     "mongodb": "^1.4.22",
