--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "sanitize-html": "^1.7.0",
     "socket.io": "^1.2.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "frisby": "^0.8.5"
+  },
   "scripts": {
     "test": "node server.js",
     "start": "node server.js"
