--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "bunyan": "^1.4.0",
+    "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
     "highlight": "^0.2.3",
     "mongodb": "^1.4.22",
