--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "bunyan": "^1.4.0",
+    "busboy": "^0.2.9",
+    "connect-busboy": "0.0.2",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
     "glob": "^5.0.14",
