--- a/package.json
+++ b/package.json
@@ -6,19 +6,14 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "bunyan": "^1.4.0",
-    "busboy": "^0.2.9",
     "connect-busboy": "0.0.2",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
-    "glob": "^5.0.14",
-    "highlight": "^0.2.3",
-    "mongodb": "^1.4.22",
     "mongoose": "^4.1.0",
     "peer": "^0.2.8",
     "qs": "^4.0.0",
     "sanitize-html": "^1.7.0",
-    "socket.io": "^1.2.1",
-    "walkdir": "0.0.10"
+    "socket.io": "^1.2.1"
   },
   "devDependencies": {
     "frisby": "^0.8.5"
