--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
     "mongoose": "^4.1.0",
+    "mustache-express": "^1.2.1",
     "peer": "^0.2.8",
     "qs": "^4.0.0",
     "sanitize-html": "^1.10.0",
