--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "connect-busboy": "0.0.2",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
+    "glob": "^5.0.15",
     "mkdirp": "^0.5.1",
     "mongoose": "^4.1.0",
     "mustache": "^2.1.3",
