--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Core server for an extensible, modular chat application",
   "main": "sites/launch_default.js",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.13.3",
     "bunyan": "^1.4.0",
     "cheerio": "^0.19.0",
@@ -14,8 +15,6 @@
     "mkdirp": "^0.5.1",
     "mongoose": "^4.1.0",
     "mustache": "^2.1.3",
-    "peer": "^0.2.8",
-    "qs": "^4.0.0",
     "sanitize-html": "^1.10.0",
     "socket.io": "^1.2.1"
   },
