--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mkdirp": "^0.5.1",
     "mongoose": "^4.1.0",
     "mustache": "^2.1.3",
+    "ncp": "^2.0.0",
     "sanitize-html": "^1.10.0",
     "socket.io": "^1.2.1"
   },
