--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
     "glob": "^5.0.15",
+    "handlebars": "^4.0.4",
     "mkdirp": "^0.5.1",
     "mongoose": "^4.1.0",
     "mustache": "^2.1.3",
