--- a/sites/default/settings.json
+++ b/sites/default/settings.json
@@ -8,6 +8,5 @@
   "db_server": "localhost",
   "db_port": 27017,
   "db_name": "pond",
-  "theme": "themes/purple",
-  "templateExtension": "mustache"
+  "theme": "themes/purple"
 }
