--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mustache": "^2.1.3",
     "ncp": "^2.0.0",
     "sanitize-html": "^1.10.0",
-    "socket.io": "^1.2.1"
+    "socket.io": "^1.2.1",
+    "tosource": "^1.0.0"
   },
   "devDependencies": {
     "frisby": "^0.8.5"
