Remove HTTPS key/cert locations

--- a/sites/default/settings.json
+++ b/sites/default/settings.json
@@ -3,8 +3,8 @@
   "apikey": "letmein",
   "secretkey": "letmein",
   "https": false,
-  "https_key": "/var/www/ssl/hub.wlmg.co.uk.key",
-  "https_cert": "/var/www/ssl/hub_combined.crt",
+  "https_key": "",
+  "https_cert": "",
   "db_server": "localhost",
   "db_port": 27017,
   "db_name": "pond",
