--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "handlebars": "^4.0.4",
     "mkdirp": "^0.5.1",
     "mongoose": "^4.1.0",
+    "mongoose-auto-increment": "^5.0.1",
     "mustache": "^2.1.3",
     "ncp": "^2.0.0",
     "sanitize-html": "^1.10.0",
