--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mustache": "^2.1.3",
     "ncp": "^2.0.0",
     "npm": "^3.5.2",
+    "prettydiff": "^1.16.6",
     "sanitize-html": "^1.10.0",
     "socket.io": "^1.2.1",
     "tosource": "^1.0.0",
