--- a/home/sites/default/settings.json
+++ b/home/sites/default/settings.json
@@ -5,6 +5,6 @@
   "https_cert": "",
   "db_server": "localhost",
   "db_port": 27017,
-  "db_name": "pond",
+  "db_name": "iris",
   "max_file_size": 10
 }
