--- a/package.json
+++ b/package.json
@@ -37,5 +37,5 @@
     "url": "git@bitbucket.org:rabbitmedia/chat-app.git"
   },
   "author": "City Web Consultants",
-  "license": "All your base are belong to us"
+  "license": "GPL-2.0"
 }
