--- a/package.json
+++ b/package.json
@@ -17,24 +17,16 @@
     "mkdirp": "^0.5.1",
     "mongoose": "^4.1.0",
     "mongoose-auto-increment": "^5.0.1",
-    "mustache": "^2.1.3",
     "ncp": "^2.0.0",
     "npm": "^3.5.2",
     "prettydiff": "^1.16.6",
     "sanitize-html": "^1.10.0",
     "socket.io": "^1.2.1",
     "tosource": "^1.0.0",
-    "uglify-js": "^2.6.1"
-  },
-  "devDependencies": {
-    "frisby": "^0.8.5"
-  },
-  "scripts": {
-    "install": "node iris_core/install.js"
   },
   "repository": {
     "type": "git",
-    "url": "git@bitbucket.org:rabbitmedia/chat-app.git"
+    "url": "https://github.com/CityWebConsultants/Iris.git"
   },
   "author": "City Web Consultants",
   "license": "GPL-2.0"
