Specify node.js engine

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "iris",
+  "engines": {
+    "node": ">=5.0.0"
+  },
   "version": "0.0.1",
   "description": "Modular content management and web application framework built with Node.js and MongoDB",
   "main": "iris.js",
