Updating travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,13 @@
 language: node_js
-node_js:
-  - "5.5"
-#before_install:
-#  - sudo apt-get install -y mongodb-org
+node_js: "5.5"
+before_install: 
+  - npm install -g grunt-cli
 before_script:
-  - npm install grunt-cli -g
   - npm install jasmine-node -g
-  - npm install
-  - mongo mydb_test --eval 'db.addUser("travis", "test");'
   - node iris.js site=default &
+  - grunt build
+install: 
+  - npm install
 services:
   - mongodb
 env: site=default
