--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.13.3",
     "glob": "^5.0.15",
     "handlebars": "^4.0.4",
+    "i18n": "^0.8.1",
     "merge": "^1.2.0",
     "minimatch": "^3.0.0",
     "mkdirp": "^0.5.1",
@@ -26,7 +27,8 @@
     "prettydiff": "^1.16.6",
     "sanitize-html": "^1.10.0",
     "socket.io": "^1.2.1",
-    "tosource": "^1.0.0"
+    "tosource": "^1.0.0",
+    "i18n": "^0.8.1"
   },
   "repository": {
     "type": "git",
