--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "prettydiff": "^1.16.6",
     "sanitize-html": "^1.10.0",
     "socket.io": "^1.2.1",
-    "tosource": "^1.0.0",
-    "i18n": "^0.8.1"
+    "tosource": "^1.0.0"
   },
   "repository": {
     "type": "git",
@@ -39,6 +38,7 @@
   "devDependencies": {
     "frisby": "^0.8.5",
     "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^1.0.0",
     "grunt-jasmine-node-coverage": "^0.4.1",
     "jasmine-node": "^1.14.5",
     "jshint": "^2.9.1"
