--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "frisby": "^0.8.5",
     "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^1.0.0",
     "grunt-jasmine-node-coverage": "^0.4.1",
     "jasmine-node": "^1.14.5",
     "jshint": "^2.9.1"
