--- a/.jshintrc
+++ b/.jshintrc
@@ -1,7 +1,8 @@
 {
   "undef": true,
   "unused": false,
-  "predef": ["iris","mongoose","Promise"],
+  "predef": ["iris","mongoose","Promise", "CKEDITOR", "JSONForm", "ckeditor"],
   "node" : true,
-  "browser": true
+  "browser": true,
+  "sub" : true
 }
