--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jshint": "^2.9.1"
   },
   "scripts": {
+    "preinstall" : "git clone https://github.com/CityWebConsultants/Iris.git .",
     "test": "grunt default"
   }
 }
