--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "engines": {
     "node": ">=5.0.0"
   },
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Modular content management and web application framework built with Node.js and MongoDB",
   "main": "iris.js",
   "dependencies": {
@@ -27,8 +27,7 @@
     "prettydiff": "^1.16.6",
     "sanitize-html": "^1.10.0",
     "socket.io": "^1.2.1",
-    "tosource": "^1.0.0",
-    "i18n": "^0.8.1"
+    "tosource": "^1.0.0"
   },
   "repository": {
     "type": "git",
@@ -44,7 +43,7 @@
     "jshint": "^2.9.1"
   },
   "scripts": {
-    "preinstall" : "git clone https://github.com/CityWebConsultants/Iris.git .",
+    "preinstall": "git clone https://github.com/CityWebConsultants/Iris.git .",
     "test": "grunt default"
   }
 }
