--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ install:
   - cd iris-project-template
   - mongoimport --db mysite --collection users --file fixtures/users.json
   - mongoimport --db mysite --collection pages --file fixtures/users.json
+  - npm install  --save git+https://github.com/facascante/Iris.git#$TRAVIS_BRANCH
   - npm install --only=dev
-  - npm install git+https://github.com/facascante/Iris.git#$TRAVIS_BRANCH
   - pm2 start index.js
 services:
   - mongodb
