--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ install:
   - git clone https://github.com/CityWebConsultants/iris-project-template.git
   - cd iris-project-template
   - mongoimport --db mysite --collection users --file fixtures/users.json
-  - mongoimport --db mysite --collection pages --file fixtures/users.json
-  - npm install  --save git+https://github.com/facascante/Iris.git#$TRAVIS_BRANCH
+  - mongoimport --db mysite --collection pages --file fixtures/pages.json
+  - npm install  --save git+https://github.com/$TRAVIS_REPO_SLUG.git#$TRAVIS_BRANCH
   - npm install --only=dev
   - pm2 start index.js
 services:
