--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jshint": "^2.9.1"
   },
   "scripts": {
-    "test": "grunt default"
+    "test": "grunt default",
+    "postinstall": "cp example.js ../../example.js"
   }
 }
