--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "jshint": "^2.9.1"
   },
   "scripts": {
-    "test": "grunt default",
-    "postinstall": "cp example.js ../../example.js"
+    "test": "grunt default"
   }
 }
