Remove Windows-breaking example.js and add install CLI
`npm install -g irisjs` will now add `irisjs` to the command line path.

Currently this serves only one use `irisjs install sitename` which steps
through a list of config questions, installs irisjs locally and creates
a launch file with the settings the user put in.

There is room to add other command line options in the future.

Requires an npm install for the `prompt` library that makes asking
questions on the command line easier with defaults and such.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^1.11.0",
     "path-to-regexp": "^1.2.1",
     "prettydiff": "^1.16.6",
+    "prompt": "^1.0.0",
     "sanitize-html": "^1.10.0",
     "socket.io": "^1.2.1",
     "tosource": "^1.0.0"
@@ -44,7 +45,9 @@
     "jshint": "^2.9.1"
   },
   "scripts": {
-    "test": "grunt default",
-    "postinstall": "cp example.js ../../example.js"
+    "test": "grunt default"
+  },
+  "bin": {
+    "irisjs": "iriscli.js"
   }
 }
