--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "handlebars": "^4.0.4",
     "i18n": "^0.8.1",
     "jsdom": "^9.3.0",
+    "jsondiffpatch": "^0.1.43",
     "merge": "^1.2.0",
     "minimatch": "^3.0.0",
     "mkdirp": "^0.5.1",
@@ -26,7 +27,6 @@
     "nedb": "^1.8.0",
     "nodemailer": "^1.11.0",
     "path-to-regexp": "^1.2.1",
-    "prettydiff": "^1.16.6",
     "sanitize-html": "^1.10.0",
     "socket.io": "^1.2.1",
     "tosource": "^1.0.0"
