--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
   - mongoimport --db mysite --collection pages --file fixtures/pages.json
   - npm install  --save git+https://github.com/$TRAVIS_REPO_SLUG.git#$TRAVIS_BRANCH
   - echo $TRAVIS_COMMIT
+  - echo $TRAVIS_PULL_REQUEST
   - npm install --only=dev
   - pm2 start index.js
   - sleep 60
