--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
   - npm install  --save git+https://github.com/$TRAVIS_REPO_SLUG.git#$TRAVIS_BRANCH
   - echo $TRAVIS_COMMIT
   - echo $TRAVIS_PULL_REQUEST
+  - echo $TRAVIS_REPO_SLUG
   - npm install --only=dev
   - pm2 start index.js
   - sleep 60
