--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js: "5.5"
 before_install: 
   - npm install -g grunt-cli jasmine-node pm2
 before_script:
+  - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then REPO_SLUG=$(curl -s "https://api.github.com/repos/CityWebConsultants/Iris/pulls/$TRAVIS_PULL_REQUEST" | jq .head.repo.full_name) fi'
 install: 
   - sudo apt-get install jq
   - npm install
@@ -11,7 +12,6 @@ install:
   - mongo mysite --eval "db.users.drop()"
   - mongoimport --db mysite --collection users --file fixtures/users.json
   - mongoimport --db mysite --collection pages --file fixtures/pages.json
-  - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ] then REPO_SLUG=$(curl -s "https://api.github.com/repos/CityWebConsultants/Iris/pulls/$TRAVIS_PULL_REQUEST" | jq .head.repo.full_name) fi'
   - echo $REPO_SLUG
   - npm install  --save git+https://github.com/$TRAVIS_REPO_SLUG.git#$TRAVIS_BRANCH
   - npm install --only=dev
