--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,13 @@ before_install:
   - npm install -g grunt-cli jasmine-node pm2
 before_script:
 install: 
-  - npm install
   - git clone https://github.com/CityWebConsultants/iris-project-template.git
   - cd iris-project-template
   - mongo mysite --eval "db.users.drop()"
   - mongoimport --db mysite --collection users --file fixtures/users.json
   - mongoimport --db mysite --collection pages --file fixtures/pages.json
   - 'REPO_SLUG=$(curl -s "https://api.github.com/repos/CityWebConsultants/Iris/pulls/315" | jq .head.repo.full_name)'
-  - if [ $TRAVIS_PULL_REQUEST > 0 ]; then 'REPO_SLUG=$(curl -s "https://api.github.com/repos/CityWebConsultants/Iris/pulls/315" | jq .head.repo.full_name)' fi
+  - if [ $TRAVIS_PULL_REQUEST ]; then 'REPO_SLUG=$(curl -s "https://api.github.com/repos/CityWebConsultants/Iris/pulls/315" | jq .head.repo.full_name)' fi
   - echo $REPO_SLUG
   - npm install  --save git+https://github.com/$TRAVIS_REPO_SLUG.git#$TRAVIS_BRANCH
   - npm install --only=dev
