--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ install:
   - mongo mysite --eval "db.users.drop()"
   - mongoimport --db mysite --collection users --file fixtures/users.json
   - mongoimport --db mysite --collection pages --file fixtures/pages.json
-  - 'REPO_SLUG=$(curl -s "https://api.github.com/repos/CityWebConsultants/Iris/pulls/$TRAVIS_PULL_REQUEST" | jq .head.repo.full_name)'
-  - 'REPO_BRANCH=$(curl -s "https://api.github.com/repos/CityWebConsultants/Iris/pulls/$TRAVIS_PULL_REQUEST" | jq .head.ref)'
+  - 'REPO_SLUG=$(curl -s "https://api.github.com/repos/$TRAVIS_REPO_SLUG/pulls/$TRAVIS_PULL_REQUEST" | jq .head.repo.full_name)'
+  - 'REPO_BRANCH=$(curl -s "https://api.github.com/repos/$TRAVIS_REPO_SLUG/pulls/$TRAVIS_PULL_REQUEST" | jq .head.ref)'
   - if [ "$REPO_BRANCH" = "null" ]; then npm install  --save git+https://github.com/$TRAVIS_REPO_SLUG.git#$TRAVIS_BRANCH; else npm install --save git+https://github.com/$REPO_SLUG.git#$REPO_BRANCH; fi
   - npm install --only=dev
   - pm2 start index.js
