--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - echo $REPO_SLUG
   - echo $TRAVIS_REPO_SLUG
   - echo $TRAVIS_BRANCH
-  - if [ "$REPO_BRANCH" = "null" ]; then npm install  --save git+https://github.com/$TRAVIS_REPO_SLUG.git#$TRAVIS_BRANCH; else npm install --save git+https://github.com/$REPO_SLUG.git#$REPO_BRANCH; fi
+  - if [ "$REPO_BRANCH" = "null" ]; then echo "this is not a pull request" && npm install  --save git+https://github.com/$TRAVIS_REPO_SLUG.git#$TRAVIS_BRANCH; else echo "this is a pull request" && npm install --save git+https://github.com/$REPO_SLUG.git#$REPO_BRANCH; fi
   - npm install --only=dev
   - pm2 start index.js
   - sleep 60
