--- a/.jshintrc
+++ b/.jshintrc
@@ -1,7 +1,7 @@
 {
   "undef": true,
   "unused": false,
-  "predef": ["iris","mongoose","Promise", "CKEDITOR", "JSONForm", "ckeditor", "jQuery", "$", "e"],
+  "predef": ["iris","mongoose","Promise", "CKEDITOR", "JSONForm", "ckeditor", "jQuery", "$", "e","describe","it","expect","beforeEach","jasmine"],
   "node" : true,
   "browser": true,
   "sub" : true,
