--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
     "glob": "^5.0.15",
+    "graceful-fs": "^4.1.5",
     "handlebars": "^4.0.4",
     "handlebars-helpers": "^0.7.3",
     "i18n": "^0.8.1",
