--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect-busboy": "0.0.2",
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
+    "express-session": "^1.14.1",
     "glob": "^5.0.15",
     "graceful-fs": "^4.1.5",
     "handlebars": "^4.0.4",
