--- a/package.json
+++ b/package.json
@@ -39,11 +39,12 @@
     "url": "https://github.com/CityWebConsultants/Iris.git"
   },
   "author": "City Web Consultants",
-  "license": "GPL-2.0",
+  "license": "ISC",
   "devDependencies": {
     "frisby": "^0.8.5",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^1.0.0",
+    "grunt-git-authors": "^3.2.0",
     "grunt-jasmine-node-coverage": "^0.4.1",
     "jasmine-node": "^1.14.5",
     "jshint": "^2.9.1"
