--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mkdirp": "^0.5.1",
     "mongoose": "^4.1.0",
     "mongoose-auto-increment": "^5.0.1",
+    "mpath": "^0.2.1",
     "ncp": "^2.0.0",
     "nedb": "^1.8.0",
     "nedb-session-store": "^1.1.1",
